public/css/style.css
/*Fonts*/ 

@font-face {
    font-family:'FinkHeavy';
    src: url("fonts/FinkHeavy.eot");
	  src: url('fonts/FinkHeavy.eot?#iefix') format('embedded-opentype'),
		url('fonts/FinkHeavy.woff2') format('woff2'),
		url('fonts/FinkHeavy.woff') format('woff'),
		url('fonts/FinkHeavy.svg#FinkHeavy') format('svg');
    font-weight: 400;
    font-style: normal;
    font-stretch: normal;
    unicode-range: U+0020-00FE;
}

html {
  font-size: 62.5%; 
  width: 100%;
}

.textHighlight {
font-family: FinkHeavy;
font-style: normal;
font-weight: 500;
font-size: 1.2em;
color: rgba(218, 127, 21);
}

/*-------- main body styles -----------*/

body {
  overflow-x: hidden;
  letter-spacing: 2px;
  width: 100%;
}
/* ------ Navbar ----------------  */

.hide {
  display: none;
}  

.navbar-brand, .gameWelcome-section h2 {
font-family: FinkHeavy;
font-style: normal;
font-weight: 500;
font-size: 3em;
color: rgba(218, 127, 21, 0.53);
mix-blend-mode: normal;
-webkit-text-stroke-color: #9E5500;
-webkit-text-stroke-width: 2.00px; ;
} 

/* Set the border color to the desired color */
.custom-toggler .navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke=' rgb(255,255,255) ' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

.custom-toggler.navbar-toggler {
  background-color: rgba(218, 127, 21, 0.53)
} 

.navbar-brand:hover {
  color: rgba(218, 127, 21);
} 

.nav-item a.nav-link{
  font-family: 'Amatic SC', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 2.5em;
  border-radius: 5px;
  background-color: rgba(218, 127, 21, 0.7);
  color: #9E5500;
  transform: rotate(0.25deg);
  margin-right: 1em;
}    

.navbar-collapse.show  a.nav-link, .navbar-collapse.collapsing a.nav-link{
    padding-left: 10px;
} 

 .navbar-collapse.show li.nav-item, .navbar-collapse.collapsing li.nav-item {
   padding-bottom: 2px; 
 }


 .navbar-nav::after {
  background:url("http://www.clker.com/cliparts/2/u/D/u/a/T/gold-paw.svg"); 
  background-size: 250px;
  content: "";
  opacity: 0.2;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: -1;     
}

.navbar-nav > li{

  padding-left:4px;
  padding-right:4px;
}

a.nav-link:hover{
 animation: shake 0.5s; 
  /* When the animation is finished, start again */
}  

@keyframes shake {
  0% { transform: translate(1px, 1px) rotate(0deg); }
  10% { transform: translate(-1px, -2px) rotate(-1deg); }
  20% { transform: translate(-3px, 0px) rotate(1deg); }
  30% { transform: translate(3px, 2px) rotate(0deg); }
  40% { transform: translate(1px, -1px) rotate(1deg); }
  50% { transform: translate(-1px, 2px) rotate(-1deg); }
  60% { transform: translate(-3px, 1px) rotate(0deg); }
  70% { transform: translate(3px, 1px) rotate(-1deg); }
  80% { transform: translate(-1px, -1px) rotate(1deg); }
  90% { transform: translate(1px, 2px) rotate(0deg); }
  100% { transform: translate(1px, -2px) rotate(-1deg); }
} 

/*------------- Homepage ---------------*/


p {
  font-family: 'Amatic SC', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 30px;
  line-height: 30px;
  color: #000000;
}

.welcome h1, .btn-primary, .btn-secondary, h3, h2 {
  font-family: FinkHeavy;
  font-style: normal;
  font-weight: 500;
  font-size: 40px;
  color: #000000;
} 

.tom {
  padding: 0;
} 


/*---- Homepage Game Section ----*/




.gameWelcome-section, .learn-section, footer {
  background-image: url("/images/background1.jpg");
  background-size: cover 100%;
}




.btn-primary, .btn-secondary {
 height: auto;
 background-color: white;
 border: 3px solid #9E5500;
 font-size: 3em;
 border-radius: 10px;

}

.btn-secondary {
  background-image: url("/images/background1.jpg");
  color:black;
}

.btn-primary:hover, .btn-secondary:hover {
  background-image: none;
  background-color: #9E5500;
  border: 3px solid white;
} 


.gameWelcome-section p {
  background-color: white;
  border-radius: 10px;
  padding: 5%;
}


/*---- Homepage Gallery Blathers Section ----*/
.blathers {
  padding-bottom: 50px;
  margin-top: -80px;}

  .gallery3d-section .text-block {
    margin-top: 50px;
  }


.learn-section p {
  background-color: white;
  border-radius: 10px;
}

.learn-section h2 {
  padding-right: 0;
} 

.gameWelcome-section h2 {
  font-size: 50px;
}
/* //Media Queries for responsiveness


// Medium devices (tablets, 768px and up)
 */

 @media screen and (max-width: 600px) {
  .welcome h1, .btn-primary, .btn-secondary, h3, h2 {
    font-size: 30px;
  }
  
  .gameWelcome-section h2 {
    font-size: 40px;
  }

  .blathers {
    padding-bottom: 0px;
    margin-left: -60px;
    margin-top: -50px;
  
  }

  .gallery3d-section .text-block {
    margin-top: 0px;
  }


  .gallery3d-section .btn {
    margin-top: 20px;
  }

  .vermeergif {
    padding: 0px;
  }
}

@media (min-width: 600px) and (max-width: 800px) {
 .welcome h1, .btn-primary, .btn-secondary, h3, h2 {
    font-size: 30px;
  }
}

